# ODyN

./: LICENSE  README.md  requirements.txt  setup.cfg
code/: Untitled-Copy1.ipynb  Untitled.ipynb  geolocations.py  simulations.py  visualizations.py
data/: montgomery_county_al_hesitancy.csv  montgomery_county_al_vaccination_trends.csv  multnomah_county_or_hesitancy.csv  multnomah_county_or_vaccination_trends.csv  national_level_vaccination_trends.csv
data/simulation_results_from_paper/1000_agent_model/: full_model_stats_df.csv
data/simulation_results_from_paper/1000_agent_model_jama/: belief_df.csv
data/simulation_results_from_paper/100_agent_model/: full_model_stats.csv
data/simulation_results_from_paper/100_agent_square_networks/: agent_df.csv  belief_df.csv  distance_model_adjacency_df.csv  full_model_adjacency_df.csv  weight_model_adjacency_df.csv
data/simulations_from_paper/initialization/: adjacency_df_FF.csv  adjacency_df_FF.pq  (+8 more)
notebooks/: Generate_plots_from_paper.ipynb  Recreate_empirical_results_from_JAMA.ipynb  demo_workbook.ipynb  generate_plots_from_paper.ipynb  generate_simulation_plots_from_paper.ipynb  workflow_demo_Multnomah_Oregon.ipynb
scripts/: accepting_simulation.py  alabama_simulation.py  antioregon_simulation.py  jama_simulation.py  jama_simulation_fixed.py  montgomery_simulation.py  multnomah_simulation.py  oregon_simulation.py  skeptical_simulation.py  skewed_simulation.py  symmetric_simulation.py
src/: __init__.py  demo_workbook.ipynb  geolocations.py  simulations.py  visualizations.py
tests/: test_simulations.py
(+577 files in other folders)
