[metadata]
name = VaccineHesitancy
version = 0.0.1
author = Anna Haensch
author_email = annahaensch@gmail.com
description = Tools for opinon dynamics related to vaccine hesitancy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/annahaensch/VaccineHesitancy
project_urls =
    Bug Tracker = https://github.com/annahaensch/VaccineHesitancy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src